<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/row"
    android:padding="10dp">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/round_id"
            android:visibility="gone"
            android:layout_weight="1"
            android:gravity="center_vertical" />


        <TextView
            android:id="@+id/no_urut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_urut"
            android:layout_gravity="center_vertical"
            style="@android:style/TextAppearance.Large"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textColor="@color/no_urut"
            android:layout_centerVertical="true" />

        <ImageView
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/no_urut"
            android:layout_marginRight="5dp"
            android:layout_alignParentTop="false"
            android:src="@drawable/line_separator"
            android:layout_centerVertical="true"
            android:id="@+id/separator"/>

        <TextView
            android:id="@+id/round_no_dada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atlet_no_dada"
            android:textColor="@color/nodada"
            android:textStyle="bold"
            android:layout_centerVertical="false"
            android:layout_toRightOf="@+id/round_nama"
            android:textSize="@dimen/nama_atlet"
            style="@android:style/TextAppearance.Large"
            />

        <TextView
            android:id="@+id/round_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atlet_nama"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/separator"
            android:textColor="@color/atlet_nama"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/nama_atlet" />

        <TextView
            android:id="@+id/round_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atlet_nama_team"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/round_nama"
            android:layout_toRightOf="@+id/separator"
            android:textColor="@color/team_nama" />

<!--
        <TextView
            android:id="@+id/atlet_team_id"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="New Text"
            android:visibility="gone"
            android:layout_gravity="center_vertical"/>
-->

        <TextView
            android:id="@+id/round_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textStyle="bold"
            android:textColor="@color/score"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            style="@android:style/TextAppearance.Large"
            android:layout_alignParentRight="true"/>

<!--        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/round_team_status"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>-->
    </RelativeLayout>
</RelativeLayout>

