<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="?android:buttonBarStyle"
    android:weightSum="3"
    android:background="@color/background_default">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:showDividers="end"
            style="?android:buttonBarStyle">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/tambah_team"
                android:id="@+id/title"
                android:textSize="@dimen/title_dialog"
                android:layout_gravity="center"
                android:gravity="center|center_horizontal"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/txt_team_nama"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textColor="#000000"
                android:background="@color/background_input_text"
                android:hint="@string/team_nama">

                <requestFocus />
            </EditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/label_team_status"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/team_status"
                android:gravity="center_vertical" />

            <RadioGroup
                android:id="@+id/rdogroup_team_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rdobtn_team_status_sendiri"
                    android:checked="false"
                    android:text="Sendiri"
                    android:layout_width="match_parent" />

                <RadioButton
                    android:id="@+id/rdobtn_team_status_lawan"
                    android:text="Lawan"
                    android:layout_height="match_parent"
                    android:checked="true" />
            </RadioGroup>

            <TextView
                android:id="@+id/team_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        style="?android:buttonBarStyle"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_batal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"
            android:text="@string/btn_batal" />

        <Button
            android:id="@+id/btnSimpanTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarButtonStyle"
            android:text="@string/btn_simpan" />

    </LinearLayout>

</LinearLayout>