<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_default">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layout_hasil"
        android:padding="@dimen/item_padding"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/item_own_team">

        <TextView
            android:id="@+id/no_urut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_urut"
            android:layout_gravity="center_vertical"
            style="@android:style/TextAppearance.Large"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textColor="@color/no_urut"
            android:layout_centerVertical="true" />

        <ImageView
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/no_urut"
            android:layout_marginRight="5dp"
            android:layout_alignParentTop="false"
            android:src="@drawable/line_separator"
            android:layout_centerVertical="true"
            android:id="@+id/separator"/>

        <TextView
            android:id="@+id/ha_nodada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atlet_no_dada"
            android:textColor="@color/nodada"
            android:textStyle="bold"
            android:layout_centerVertical="false"
            android:layout_toRightOf="@+id/ha_nama"
            android:textSize="@dimen/nama_atlet"
            style="@android:style/TextAppearance.Large"
            />

        <TextView
            android:id="@+id/ha_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atlet_nama"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@+id/separator"
            android:textColor="@color/atlet_nama"
            android:textStyle="bold"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/nama_atlet" />

        <TextView
            android:id="@+id/ha_team_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atlet_nama_team"
            android:layout_gravity="center_vertical"
            android:layout_below="@+id/ha_nama"
            android:layout_toRightOf="@+id/separator"
            android:textColor="@color/team_nama" />

        <TextView
            android:id="@+id/ha_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textStyle="bold"
            android:textColor="@color/score"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            style="@android:style/TextAppearance.Large"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ha_team_status"
            android:layout_gravity="center_vertical"
            android:visibility="gone"/>
    </RelativeLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_hasil">
        <android.support.v4.view.PagerTabStrip
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/nav_bg_color"
            android:textColor="#fff"/>
    </android.support.v4.view.ViewPager>

</RelativeLayout>