<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/row"
    android:padding="@dimen/item_padding">

    <TextView
        android:id="@+id/atlet_no_urut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_urut"
        android:layout_gravity="center_vertical"
        style="@android:style/TextAppearance.Large"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:textColor="@color/no_urut"
        android:layout_centerVertical="true" />

    <ImageView
        android:layout_width="2dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/atlet_no_urut"
        android:layout_marginRight="5dp"
        android:layout_alignParentTop="false"
        android:src="@drawable/line_separator"
        android:layout_centerVertical="true"
        android:id="@+id/separator"/>

    <TextView
        android:id="@+id/atlet_no_dada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atlet_no_dada"
        android:textColor="@color/nodada"
        android:textStyle="bold"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="false"
        android:layout_toRightOf="@+id/atlet_nama"
        android:textSize="@dimen/nama_atlet"
        style="@android:style/TextAppearance.Large"
       />

    <TextView
        android:id="@+id/atlet_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atlet_nama"
        android:layout_gravity="center_vertical"
        android:layout_toRightOf="@+id/separator"
        android:textColor="@color/atlet_nama"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/nama_atlet" />

    <TextView
        android:id="@+id/atlet_nama_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atlet_nama_team"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/atlet_nama"
        android:layout_toRightOf="@+id/separator"
        android:textColor="@color/team_nama" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="New Text"
        android:id="@+id/atlet_team_id"
        android:visibility="gone"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/atlet_team_status"
        android:layout_gravity="center_vertical"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icon_indicator"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

</RelativeLayout>