<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background_default"
    style="?android:buttonBarStyle"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/title_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/round_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atlet_nama"
                    android:textColor="@color/atlet_nama"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/title_dialog"
                    style="@android:style/TextAppearance.Large"/>

                <TextView
                    android:id="@+id/round_nodada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atlet_no_dada"
                    android:textColor="@color/nodada"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_dialog"
                    style="@android:style/TextAppearance.Large"/>

            </LinearLayout>

            <TextView
                android:id="@+id/round_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atlet_nama_team"
                android:layout_below="@+id/title_layout"
                android:textColor="@color/team_nama"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <!-- begin label score -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:weightSum="2">
            <TextView
                android:id="@+id/tv_wasit_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@android:style/TextAppearance.Large"
                android:text="Wasit 1"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tv_wasit_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@android:style/TextAppearance.Large"
                android:text="Wasit 2"
                android:layout_weight="1"/>
        </LinearLayout>
        <!-- end label score -->

        <!-- begin for layout edit text -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <EditText
                android:id="@+id/score_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_default"
                android:layout_weight="1"
                android:hint="00.00"
                android:gravity="center"
                android:textSize="@dimen/input_score"
                android:textColor="@color/score"
                android:inputType="numberDecimal"
                android:padding="2dp"/>
            <EditText
                android:id="@+id/score_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_default"
                android:layout_weight="1"
                android:hint="00.00"
                android:gravity="center"
                android:textSize="@dimen/input_score"
                android:textColor="@color/score"
                android:inputType="numberDecimal"
                android:padding="2dp"/>
        </LinearLayout>
        <!-- end for layout edit text -->
    </LinearLayout>

    <!--begin for button layout-->
    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:id="@+id/linearLayout2">

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/btn_batal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_batal"
            android:layout_weight="1" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/btn_simpan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_simpan"
            android:layout_weight="1" />

    </LinearLayout>
    <!-- end button layout -->

</LinearLayout>